[tool.poetry]
name = "custom-developer-products"
version = "0.0.1"
description = "In beta. A project to allow you to make custom developer products from Roblox scripts without having to manually create them."
authors = ["@parker02311"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
